@@ -7,13 +7,11 @@ import com.petservice.main.user.database.entity.User;
 import com.petservice.main.user.database.mapper.BookmarkMapper;
 import com.petservice.main.user.database.repository.BookmarkRepository;
 import com.petservice.main.user.database.repository.UserRepository;
-import com.petservice.main.qna.database.repository.QnaPostRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,26 +19,18 @@ public class BookmarkServiceImpl implements BookmarkServiceInterface {
 
     private final BookmarkRepository bookmarkRepository;
     private final UserRepository userRepository;
-    private final QnaPostRepository qnaPostRepository;
     private final BookmarkMapper bookmarkMapper;
 
     @Override
     @Transactional
     public void addBookmark(String userLoginId, BookmarkType bookmarkType, Long targetId) {
+        // 이미 북마크했는지 확인 (커스텀 쿼리로 처리)
+        boolean exists = bookmarkRepository.existsByUser_UserLoginIdAndBookmarkTypeAndTargetId(userLoginId, bookmarkType, targetId);
+        if (exists) return;
+
+        // 사용자 조회 (북마크 생성에 user 엔티티 필요)
         User user = userRepository.findByUserLoginId(userLoginId)
                 .orElseThrow(() -> new EntityNotFoundException("사용자를 찾을 수 없습니다"));
-
-        // QNA 게시글 존재 여부 확인
-        if (bookmarkType == BookmarkType.QNA && !qnaPostRepository.existsById(targetId)) {
-            throw new EntityNotFoundException("QnA 게시글이 존재하지 않습니다.");
-        }
-
-        // 이미 북마크했는지 확인 (메모리상에서 체크)
-        boolean exists = bookmarkRepository.findAll().stream()
-                .anyMatch(b -> b.getUser().getId().equals(user.getId())
-                        && b.getBookmarkType() == bookmarkType
-                        && b.getTargetId().equals(targetId));
-        if (exists) return;
 
         Bookmark bookmark = new Bookmark();
         bookmark.setUser(user);
@@ -52,48 +42,30 @@ public class BookmarkServiceImpl implements BookmarkServiceInterface {
     @Override
     @Transactional
     public void removeBookmark(String userLoginId, BookmarkType bookmarkType, Long targetId) {
-        User user = userRepository.findByUserLoginId(userLoginId)
-                .orElseThrow(() -> new EntityNotFoundException("사용자를 찾을 수 없습니다"));
-
-        // 메모리상에서 찾아서 삭제
-        bookmarkRepository.findAll().stream()
-                .filter(b -> b.getUser().getId().equals(user.getId())
-                        && b.getBookmarkType() == bookmarkType
-                        && b.getTargetId().equals(targetId))
-                .forEach(bookmarkRepository::delete);
+        // 검증 없이 바로 삭제 (user 조회 없이)
+        bookmarkRepository.deleteByUser_UserLoginIdAndBookmarkTypeAndTargetId(userLoginId, bookmarkType, targetId);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<BookmarkDTO> getBookmarksByUser(String userLoginId) {
-        User user = userRepository.findByUserLoginId(userLoginId)
-                .orElseThrow(() -> new EntityNotFoundException("사용자를 찾을 수 없습니다"));
-
-        return bookmarkRepository.findAll().stream()
-                .filter(b -> b.getUser().getId().equals(user.getId()))
-                .filter(b -> b.getBookmarkType() != BookmarkType.QNA || qnaPostRepository.existsById(b.getTargetId()))
+        // 커스텀 쿼리로 북마크 목록 조회
+        return bookmarkRepository.findByUser_UserLoginId(userLoginId).stream()
                 .map(bookmarkMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public boolean isBookmarked(String userLoginId, BookmarkType bookmarkType, Long targetId) {
-        User user = userRepository.findByUserLoginId(userLoginId)
-                .orElseThrow(() -> new EntityNotFoundException("사용자를 찾을 수 없습니다"));
-
-        return bookmarkRepository.findAll().stream()
-                .anyMatch(b -> b.getUser().getId().equals(user.getId())
-                        && b.getBookmarkType() == bookmarkType
-                        && b.getTargetId().equals(targetId));
+        // 커스텀 쿼리로 북마크 존재 여부 확인
+        return bookmarkRepository.existsByUser_UserLoginIdAndBookmarkTypeAndTargetId(userLoginId, bookmarkType, targetId);
     }
 
     @Override
     @Transactional
     public void cleanupDeletedItem(BookmarkType bookmarkType, Long targetId) {
-        List<Bookmark> toDelete = bookmarkRepository.findAll().stream()
-                .filter(b -> b.getBookmarkType() == bookmarkType && b.getTargetId().equals(targetId))
-                .collect(Collectors.toList());
-        bookmarkRepository.deleteAll(toDelete);
+        // 커스텀 쿼리로 북마크 일괄 삭제
+        bookmarkRepository.deleteByBookmarkTypeAndTargetId(bookmarkType, targetId);
     }
 }
